                           Don't send messages to ourselves via the mailsystem
                             but instead place them in the pool as incoming
                             messages so that they will get processed with the
                             next pool run.
                           No longer try to send a message if there are no
                             recipients left.
                           Set default max-randhops from 20 to 4.
                           Remix-To chain is limited by max-randhops limit as
                             well.
                           Messages to more than one remailer are dropped.
                           Nym support is not compiled in by default anymore.
                           The OpenPGP module mpgp now includes a man
                             page (large contributions by Trek).
                           Ignore 'No reliable remailers' problems when
                             randhopping messages in middleman mode.
                             That is better than dropping them.
                           Experimental feature:  --redirect -l <chain>.
                             If you have a mixmaster message with a
                             chain starting with hop1 (you cannot know any
                             more because it already is encrypted) then
                             mix --redirect -l foo,bar < file
                             redirect the message so the chain is actually
                             foo,bar,hop1,... and places it in your pool.
                             If the total number of hops (which cannot be
                             known) exceeds 20 the message is damanged
                             and will fail at the 20th node.

2004-03-20      3.0b2-unreleased
                           Fall back to 3DES as Encrypt-Key cipher if we don't
                             have IDEA. - Laurent Fousse <laurent@komite.net>